cmake_minimum_required(VERSION 3.17)
project(module06_study_stl)

set(CMAKE_CXX_STANDARD 17)

add_executable(module06_study_stl main.cpp)
add_executable(study-stl study-stl.cpp)
add_executable(study-how-to-iterate study-how-to-iterate.cpp)
add_executable(study-map study-map.cpp)
add_executable(exercise1 exercise1.cpp country.cpp city.cpp world-util.cpp)
add_executable(exercise2 exercise2.cpp country.cpp city.cpp world-util.cpp)
add_executable(exercise3 exercise3.cpp country.cpp city.cpp world-util.cpp)